--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,6 +6,5 @@ test:
 
 production:
   adapter: redis
-  # url: redis://localhost:6379/1
-  url: <%= ENV['REDIS_URL'] %>
+  url: <%= ENV["REDIS_URL"] %>
   channel_prefix: recipes_production
